--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "doks-child-theme",
   "description": "Doks child theme",
-  "version": "0.4.2",
+  "version": "0.9.5",
   "browserslist": [
     "defaults"
   ],
-  "repository": "https://github.com/h-enk/doks",
+  "repository": "https://github.com/daptin/daptin",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
